Shenandoah: Shenandoah String Dedup thread is not properly initialized

XMLWordPrintable

    • gc

      This bug seems to exist since day one of 8u backport. The ConcurrentGCThread API is different in 8u and we leaves ShenandoahDedupThread not properly initialized before it enters work loop.

      In Shenandoah String Deduplication tests, the bug results assertion failure that shows Thread::current() == NULL.

      The bug only manifests on Windows, is due to discrepancy of java_start() implementation on different OSs. e.g. it sets *thread* on Linux.

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: