8231366: Shenandoah: Shenandoah String Dedup thread is not properly initialized Reviewed-by: shade, andrew